frontend/components/Container/Container.module.css
.container {
    min-width: 335px;
    max-width: 430px;
    width: 100%;
    padding: 0 20px;
    margin: 0 auto
}

@media only screen and (min-width: 768px) {
    .container {
        max-width: 768px;
        padding: 0;
    }
}

@media only screen and (min-width: 1024px) {
    .container {
        max-width: 1024px;
    }
}

@media only screen and (min-width: 1440px) {
    .container {
        max-width: 1360px;
    }
}

